--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Chen Yang(杨晨)</title>
-</head>
-<body>
-    <h1>杨晨</h1>
-    <p>我的第一个段落。</p>
-</body>
-</html>
+<h1>Chen Yang</h1>
+
+<p>Welcome to my website.</p>
+
+<p>I am a PhD student in Finance with Durham University Business School, Durham University. I graduated from Leeds University Business School (MSc Finance and Investment, Distinction) in 2018 and Jilin University School of Economics (BSc Finance) in 2016.</p>
+
+<h3>Research Interests</h3>
+
+<p>Corporate Finance, Corporate Governance, ESG &amp; CSR, Financial Reporting, Behavioural Finance.</p>
+
+<h3>Working Paper</h3>
+
+<ol><li>CEO Home Bias and CSR</li><li>CEO Home Bias and Financial Misreporting</li><li>CEO Home Bias and M&amp;A</li></ol>
