--- a/index.html
+++ b/index.html
@@ -10,4 +10,8 @@
 
 <h3>Working Paper</h3>
 
-<ol><li>CEO Home Bias and CSR, with Dr Zicheng Lei (King's), Prof. Dimitris Petmezas (Durham), and Prof. Raghavendra Rau (Cambridge)</li><li>CEO Home Bias and Financial Misreporting , with Dr Zicheng Lei (King's), Prof. Dimitris Petmezas (Durham), and Prof. Raghavendra Rau (Cambridge)</li><li>CEO Home Bias and M&amp;A</li></ol>
+<ol><li>CEO Home Bias and CSR, with Dr Zicheng Lei (King's), Prof. Dimitris Petmezas (Durham), and Prof. Raghavendra Rau (Cambridge)</li><li>CEO Home Bias and Financial Misreporting , with Dr Zicheng Lei (King's), Prof. Dimitris Petmezas (Durham), and Prof. Raghavendra Rau (Cambridge)</li></ol>
+
+<h3>Work in Progress</h3>
+
+<ol><li>CEO Home Bias and M&amp;A</li><ol>
