--- a/index.html
+++ b/index.html
@@ -15,3 +15,18 @@
 <h3>Work in Progress</h3>
 
 <ol><li>CEO Home Bias and M&amp;A</li><ol>
+  
+
+  
+<h3>Teaching</h3>
+
+<ol><li>1. Seminar Tutor. ECON2181 Introduction to Financial Econometrics (Undergraduate), Durham University Business School</li><ol>
+  
+  
+  
+  
+<h3>Links</h3>
+
+<ol><li>My Github</li>><li>My Twitter</li>><li>My Profile</li><ol>
+
+
