--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul>
             <li>
                 PhD Student in Finance (Scholarship), Durham University Business School (Dec 2020- );
-                <div><em>&nbsp;&nbsp;Supervisor: <a href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">
+                <div><em>&nbsp;&nbsp;Supervisors: <a href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">
                 Prof Dimitris Petmezas</a>, <a href="https://www.dur.ac.uk/directory/profile/?id=4072">Prof Michael Guo</a></em></div>
             </li>
             <li>
