--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </li>
             <li>
                 PhD Student in Finance (Full Scholarship), Surrey Business School  (Sep 2019- Nov 2020);
-                <div><em>&nbsp;&nbsp;Supervisor: <a href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">Prof Dimitris Petmezas</a>, <a href="https://www.kcl.ac.uk/people/zicheng-lei">Dr Zicheng Lei</a></em></div>
+                <div><em>&nbsp;&nbsp;Supervisors: <a href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">Prof Dimitris Petmezas</a>, <a href="https://www.kcl.ac.uk/people/zicheng-lei">Dr Zicheng Lei</a></em></div>
             </li>
             <li>
                 MSc in Finance (Distinction), Leeds University Business School (2017 Jul- 2018 Sep);
