--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 
 
-<body>
-
+<body class = "text">
+    <span class= "top_menu">About Me</span>
+    <span class= "top_menu">CV</span>
+    <span class= "top_menu">Links</span>
     <header>
         <h1>Chen Yang</h1>
 
@@ -22,17 +24,17 @@
     </header>
     <br>
 
-    <main>
+    <main >
         <h2>Education</h2>
         <ul>
             <li>
                 PhD Student in Finance (Scholarship), Durham University Business School (Dec 2020- );
-                <div><em>&nbsp;&nbsp;Supervisors: <a href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">
+                <div><em>&nbsp;&nbsp;Supervisor: <a href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">
                 Prof Dimitris Petmezas</a>, <a href="https://www.dur.ac.uk/directory/profile/?id=4072">Prof Michael Guo</a></em></div>
             </li>
             <li>
                 PhD Student in Finance (Full Scholarship), Surrey Business School  (Sep 2019- Nov 2020);
-                <div><em>&nbsp;&nbsp;Supervisors: <a href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">Prof Dimitris Petmezas</a>, <a href="https://www.kcl.ac.uk/people/zicheng-lei">Dr Zicheng Lei</a></em></div>
+                <div><em>&nbsp;&nbsp;Supervisor: <a href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">Prof Dimitris Petmezas</a>, <a href="https://www.kcl.ac.uk/people/zicheng-lei">Dr Zicheng Lei</a></em></div>
             </li>
             <li>
                 MSc in Finance (Distinction), Leeds University Business School (2017 Jul- 2018 Sep);
