--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
 
 <body class = "text">
-    <span class= "top_menu">About Me</span>
-    <span class= "top_menu">CV</span>
-    <span class= "top_menu">Links</span>
+    <box id ="menu_box">
+    <span class= "top_menu"><a href = "./index.html">About Me</a></span>
+    <span class= "top_menu"><a href = "./CV.html" target="_blank">CV</a></span>
+    <span class= "top_menu"><a href = "./Links.html" target="_blank">Links</a></span>
+    </box>
     <header>
         <h1>Chen Yang</h1>
 
@@ -29,12 +31,12 @@
         <ul>
             <li>
                 PhD Student in Finance (Scholarship), Durham University Business School (Dec 2020- );
-                <div><em>&nbsp;&nbsp;Supervisor: <a href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">
+                <div><em>Supervisors: <a href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">
                 Prof Dimitris Petmezas</a>, <a href="https://www.dur.ac.uk/directory/profile/?id=4072">Prof Michael Guo</a></em></div>
             </li>
             <li>
                 PhD Student in Finance (Full Scholarship), Surrey Business School  (Sep 2019- Nov 2020);
-                <div><em>&nbsp;&nbsp;Supervisor: <a href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">Prof Dimitris Petmezas</a>, <a href="https://www.kcl.ac.uk/people/zicheng-lei">Dr Zicheng Lei</a></em></div>
+                <div><em>Supervisors: <a href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">Prof Dimitris Petmezas</a>, <a href="https://www.kcl.ac.uk/people/zicheng-lei">Dr Zicheng Lei</a></em></div>
             </li>
             <li>
                 MSc in Finance (Distinction), Leeds University Business School (2017 Jul- 2018 Sep);
