--- a/CV.html
+++ b/CV.html
@@ -20,9 +20,9 @@
         <h1>Chen Yang</h1>
     </header>
 
+    <div class = "pic">
     <img src="https://raw.githubusercontent.com/chenyangfinance/chenyangfinance.github.io/main/picture_corporate_finance.jpg" alt="Corporate Finance">
-
-    
+    </div>
 
 
 </body>
