--- a/Links.html
+++ b/Links.html
@@ -21,9 +21,9 @@
 
     </header>
         <br><br><br>
-
+    <div class="pic">
     <img src="https://raw.githubusercontent.com/chenyangfinance/chenyangfinance.github.io/main/picture_corporate_finance.jpg" alt="Corporate Finance">
-
+    </div>
     
 
 
