--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
         </ul>
 
         <br><br><br>
-
-        <img src="https://raw.githubusercontent.com/chenyangfinance/chenyangfinance.github.io/main/picture_corporate_finance.jpg" alt="Corporate Finance">
+        <div class="pic">
+            <img src="https://raw.githubusercontent.com/chenyangfinance/chenyangfinance.github.io/main/picture_corporate_finance.jpg" alt="Corporate Finance">
+        </div>
     </main>
     
 
