--- a/Coding.html
+++ b/Coding.html
@@ -49,9 +49,9 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="index.html">About Me</a></li>
-                <li class="active"><a href="./CV.html">CV</a></li>
-                <li><a href="./Coding.html">Coding</a></li>
-                <li><a href="./Links.html">Links</a></li>
+                <li><a href="./CV.html">CV</a></li>
+                <li class="active"><a href="./Coding.html">Coding</a></li>
+                <li ><a href="./Links.html">Links</a></li>
             </ul>
         </div>
     </nav>
@@ -67,28 +67,9 @@
             <i style="color:sienna;font-size: smaller;">
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Life is short, talk is cheap, show me the data, and the code.
             </i>
-
         </h2>
-        <hr /> <br>
-        <div class="text-center">
-            <strong><a class="lead" href="./CV.pdf">You can click here to download my CV. Thank you!</a> </strong>
-        </div>
-        <br>
-        <br>
-        <div class="text-center">
-            <iframe src="./CV.pdf" width="800vw" height="1000vw">
-                abvdef
-            </iframe>
-        </div>
+
     </div>
-
-
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
 
 
 </body>
@@ -100,6 +81,6 @@
 <div class="text-center" style="font-family: Georgia, 'Times New Roman', Times, serif;">
     &copy;Coding by Chen
 </div>
-
+</footer>
 
 </html>
