--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <h2>
             <i style="color:sienna;font-size: smaller;">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Life is short, talk is cheap, show me the data, and the code.
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Talk is cheap, life is short, show me the data, and the code.
             </i>
 
         </h2>
