--- a/CN.html
+++ b/CN.html
@@ -48,11 +48,12 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="index.html">About Me</a></li>
+                <li ><a href="index.html">About Me</a></li>
                 <li><a href="./CV.html">CV</a></li>
                 <li><a href="./Coding.html">Coding</a></li>
                 <li><a href="./Links.html">Links</a></li>
-                <li><a href="./CN.html">中文</a></li>
+                <li class="active"><a href="./CN.html">中文</a></li>
+
             </ul>
         </div>
     </nav>
@@ -60,87 +61,81 @@
 
     <div class="container" style="font-family: Georgia">
         <h1>
-            Chen Yang
+            杨晨
         </h1>
 
-
         <h2>
-            <i style="color:sienna;font-size: smaller;">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Talk is cheap, life is short, show me the data, and the code.
-            </i>
+            <p style="color:sienna; font-size: xx-large; font-family: '华文楷体';">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 空谈误国，人生苦短，数据说话，放码过来。
+            </p>
 
         </h2>
         <hr /> <br>
-        <div class="lead">I am a PhD student in Finance. I graduated from Leeds University Business School in 2018 and
-            Jilin University
-            School of Economics in 2016. I love corporate finance, financial economics, behavioural finance, and diet
-            coke.</div>
+        <div class="lead" style="font-size: x-large; "> 我是一名金融学的三年级博士研究生。我本科毕业于吉林大学经济学院金融系（2016），硕士毕业于英国利兹大学商学院的金融与投资专业（2018）。</div>
         <br>
         <h3>
             <strong>
-                Education
+                教育经历
             </strong>
         </h3>
         <ul class="list-unstyled">
 
             <li class="lead">
-                PhD Student in Finance (Scholarship), Durham University Business School (Dec 2020- );
-                <div><em> &nbsp;&nbsp;&nbsp;&nbsp;Supervisors: <a
+                博士研究生，金融学 (奖学金), 杜伦大学商学院 (2020年12月 - );
+                <div><em> &nbsp;&nbsp;&nbsp;&nbsp;导师: <a
                             href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">
                             Prof Dimitris Petmezas</a>, <a href="https://www.dur.ac.uk/directory/profile/?id=4072">Prof
                             Michael
                             Guo</a></em></div>
             </li>
             <li class="lead">
-                PhD Student in Finance (Full Scholarship), Surrey Business School (Sep 2019- Nov 2020);
-                <div><em> &nbsp;&nbsp;&nbsp;&nbsp;Supervisors: <a
+                博士研究生，金融学 (全额奖学金), 萨里商学院 (2019年9月- 2020年11月);
+                <div><em> &nbsp;&nbsp;&nbsp;&nbsp;导师: <a
                             href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">Prof
                             Dimitris
                             Petmezas</a>, <a href="https://www.kcl.ac.uk/people/zicheng-lei">Dr Zicheng Lei</a></em>
                 </div>
             </li>
             <li class="lead">
-                MSc in Finance (Distinction), Leeds University Business School (Jul 2017- Sep 2018);
+                硕士 金融与投资(一等学位), 利兹大学商学院 (2017年7月- 2018年9月);
 
             </li>
             <li class="lead">
-                BSc in Finance, School of Economics, Jilin University (Sep 2012- Jul 2016).
+                本科 金融学, 吉林大学经济学院 (2012年9月- 2016年7月).
             </li>
         </ul> <br>
         <h3>
             <strong>
-                Research Interests
+                研究兴趣
             </strong>
         </h3>
 
         <ul class="list-unstyled">
-            <li class="lead">Corporate Finance, Corporate Govanance, ESG, CSR, Financial Reporting</li>
+            <li class="lead">公司金融，公司治理，ESG，企业社会责任，财务报告</li>
         </ul>
         <br>
         <h3>
             <strong>
-                Working Paper
+                工作论文
             </strong>
         </h3>
 
         <ol>
             <li class="lead">
-                <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3718687" target="_blank">CEO Birthplace
-                    Identity
-                    and Corporate Social Responsibility</a>.
-                <p style="font-size: large; font-style: italic;">with Dr Zicheng Lei (King's), Prof. Dimitris Petmezas
+                <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3718687" target="_blank">CEO的家乡认同和企业社会责任</a>.
+                <p style="font-size: large; font-style: italic;">合作者 Dr Zicheng Lei (King's), Prof. Dimitris Petmezas
                     (Durham)
                     and<a href="https://www.jbs.cam.ac.uk/faculty-research/faculty-a-z/raghavendra-rau/#item1"
                         target="_blank"> Prof. Raghavendra Rau</a> (Cambridge).</p>
-                <p style="font-size: large; ">Present at: FMA 2021, CICF 2021, EFMA 2021, DGF 2021, 4th Conference on
+                <p style="font-size: large; ">会议宣讲: FMA 2021, CICF 2021, EFMA 2021, DGF 2021, 4th Conference on
                     CSR, the Economy and
                     Financial Markets 2021 </p>
             </li>
             <li class="lead">
-                CEO Home Bias and Financial Misconduct. <p style="font-size: large; font-style: italic;">with Dr Zicheng
+                CEO的家乡认同和企业不当行为. <p style="font-size: large; font-style: italic;">合作者 Dr Zicheng
                     Lei (King's), Prof. Dimitris Petmezas (Durham),
                     and Prof. Raghavendra Rau (Cambridge).</p>
-                <p style="font-size: large; ">Present at: FMA European 2021</p>
+                <p style="font-size: large; ">会议宣讲: FMA European 2021</p>
             </li>
         </ol>
         <br>
@@ -148,23 +143,22 @@
 
         <h3>
             <strong>
-                Work in Progress
+                进行中的研究
             </strong>
         </h3>
         <ol>
-            <li class="lead">CEO Home Bias and M&A.</li>
+            <li class="lead">CEO的家乡认同和并购.</li>
         </ol>
 
         <br>
         <h3>
             <strong>
-                Teaching
+                教学经历
             </strong>
         </h3>
         <ol>
-            <li class="lead">Teaching Assitant (Seminar Tutor). <em>ECON2181 Introduction to Financial Econometrics</em>
-                (Oct 2021-Dec
-                2021)</li>
+            <li class="lead">课程助教 (习题课讲师). <em>ECON2181 金融计量学导论</em>
+                (2021年10月- 2021年12月)</li>
         </ol>
 
     </div>
