--- a/Links.html
+++ b/Links.html
@@ -52,6 +52,7 @@
                 <li><a href="./CV.html">CV</a></li>
                 <li><a href="./Coding.html">Coding</a></li>
                 <li class="active"><a href="./Links.html">Links</a></li>
+                <li><a href="./CN.html">中文</a></li>
             </ul>
         </div>
     </nav>
