--- a/CV.html
+++ b/CV.html
@@ -52,6 +52,8 @@
                 <li class="active"><a href="./CV.html">CV</a></li>
                 <li><a href="./Coding.html">Coding</a></li>
                 <li><a href="./Links.html">Links</a></li>
+                <li><a href="./CN.html">中文</a></li>
+
             </ul>
         </div>
     </nav>
