--- a/Coding.html
+++ b/Coding.html
@@ -70,6 +70,15 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Talk is cheap, life is short, show me the data, and the code.
             </i>
         </h2>
+        <br>
+        <ul class = "list-unstyled">
+            <p class = "h4">I use Stata most of time. I also code with Python.</p>
+            <br>
+            <p class = "h4"> 1. This is a project which can download abstracts from journals and store them as a WORD document. <a href="https://github.com/chenyangfinance/FinanceJournal">[Github Link]</a></p>
+            <p class = "h4">I reply on this to run a Wechat official account to spread contents about finance, economics, and accounting.</p>
+
+        </div>
+      
 
     </div>
 
@@ -81,8 +90,10 @@
 <br>
 <br>
 <div class="text-center" style="font-family: Georgia, 'Times New Roman', Times, serif;">
-    &copy;Coding by Chen
+    &copy; Coding by Chen
 </div>
+
+
 </footer>
 
 </html>
