--- a/Coding.html
+++ b/Coding.html
@@ -72,10 +72,10 @@
         </h2>
         <br>
         <ul class = "list-unstyled">
-            <p class = "h4">I use Stata most of time. I also code with Python.</p>
+            <p class = "h4">I use Stata most of time. I also code with Python, Go, and R.</p>
             <br>
             <p class = "h4"> 1. This is a project which can download abstracts from journals and store them as a WORD document. <a href="https://github.com/chenyangfinance/FinanceJournal">[Github Link]</a></p>
-            <p class = "h4">I reply on this to run a Wechat official account to spread contents about finance, economics, and accounting.</p>
+            <p class = "h4">This project helps me to run a Wechat official account to spread contents about finance, economics, and accounting.</p>
 
         </div>
       
