--- a/Links.html
+++ b/Links.html
@@ -124,9 +124,17 @@
 </h3>
 <ul>
     <li style="font-size: large;">
-        <a href="http://kaichen.work/">Kai Chen (SAS Python Stata Coding)</a>
+        <a href="https://alexedmans.com/research/">Prof Alex Edmans (with LBS, very interesting financial and economic contents)</a>
     </li>
-
+    <li style="font-size: large;">
+        <a href="https://stumblingandmumbling.typepad.com/">Chris Dillow (Inspiring articals on behavioural economics and  business)</a>
+    </li>
+    <li style="font-size: large;">
+        <a href="http://kaichen.work/">Kai Chen (SAS Python Stata coding)</a>
+    </li>
+    <li style="font-size: large;">
+        <a href="https://mingze-gao.com/">Mingze Gao (A PhD student, useful teaching and research notes)</a>
+    </li>
 </ul>
 
 
