--- a/Links.html
+++ b/Links.html
@@ -120,20 +120,20 @@
 
 </ul>
 <h3>
-    <strong>Scholars' Website:</strong>
+    <strong>Scholars' Websites:</strong>
 </h3>
 <ul>
     <li style="font-size: large;">
-        <a href="https://alexedmans.com/research/">Prof Alex Edmans (with LBS, very interesting financial and economic contents)</a>
+        <a href="https://alexedmans.com/research/">Prof Alex Edmans</a> (with LBS, very interesting financial and economic contents)
     </li>
     <li style="font-size: large;">
-        <a href="https://stumblingandmumbling.typepad.com/">Chris Dillow (Inspiring articals on behavioural economics and  business)</a>
+        <a href="https://stumblingandmumbling.typepad.com/">Chris Dillow</a> (Inspiring articals on behavioural economics and  business)
     </li>
     <li style="font-size: large;">
-        <a href="http://kaichen.work/">Kai Chen (SAS Python Stata coding)</a>
+        <a href="http://kaichen.work/">Kai Chen</a> (SAS Python Stata coding)
     </li>
     <li style="font-size: large;">
-        <a href="https://mingze-gao.com/">Mingze Gao (A PhD student, useful teaching and research notes)</a>
+        <a href="https://mingze-gao.com/">Mingze Gao</a> (A PhD student, useful teaching and research notes)
     </li>
 </ul>
 
