--- a/CV.html
+++ b/CV.html
@@ -38,7 +38,7 @@
     <nav class="nanbar navbar-inverse " role="navigation" style="font-family: Georgia;">
 
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="navbar-collapse">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -46,7 +46,7 @@
             </button>
             <a href="index.html" class="navbar-brand">Chen Yang</a>
         </div>
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse" id = 'bs-example-navbar-collapse-1'>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="index.html">About Me</a></li>
                 <li class="active"><a href="./CV.html">CV</a></li>
