--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <div class = "col-md-2 col-sm-2" style ="background-color: red;">4</div>
         <div class = "col-md-10 col-sm-10" style ="background-color:sandybrown">8</div>
     </div> -->
-    <nav class="nanbar navbar-inverse " role="navigation" style="font-family: Georgia;">
+    <nav class="navbar navbar-inverse nofollow" role="navigation" style="font-family: Georgia;">
 
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="navbar-collapse">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -46,7 +46,7 @@
             </button>
             <a href="index.html" class="navbar-brand">Chen Yang</a>
         </div>
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse" id = 'bs-example-navbar-collapse-1'>
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="index.html">About Me</a></li>
                 <li><a href="./CV.html">CV</a></li>
