--- a/Links.html
+++ b/Links.html
@@ -127,10 +127,13 @@
         <a href="https://alexedmans.com/research/">Prof Alex Edmans</a> (with LBS, very interesting financial and economic contents)
     </li>
     <li style="font-size: large;">
+        <a href="https://sites.google.com/site/danlingjiang/">Prof Danling Jiang</a> (with Stony Brook U., data and code of her research)
+    </li>
+    <li style="font-size: large;">
         <a href="https://stumblingandmumbling.typepad.com/">Chris Dillow</a> (Inspiring articals on behavioural economics and  business)
     </li>
     <li style="font-size: large;">
-        <a href="http://kaichen.work/">Kai Chen</a> (SAS Python Stata coding)
+        <a href="http://kaichen.work/">Kai Chen</a> (shared SAS, Python, and Stata coding)
     </li>
     <li style="font-size: large;">
         <a href="https://mingze-gao.com/">Mingze Gao</a> (A PhD student, useful teaching and research notes)
