--- a/CN.html
+++ b/CN.html
@@ -71,7 +71,7 @@
 
         </h2>
         <hr /> <br>
-        <div class="lead" style="font-size: x-large; "> 我是一名金融学的三年级博士研究生。我本科毕业于吉林大学经济学院金融系（2016），硕士毕业于英国利兹大学商学院的金融与投资专业（2018）。</div>
+        <div class="lead" style="font-size: x-large; "> 我是一名金融学的三年级博士研究生。我本科毕业于吉林大学经济学院金融系（2016），硕士毕业于英国利兹大学商学院的金融与投资专业（2018）。让我感到开心的事物：公司金融学，金融经济学，行为金融学，烹饪，和健怡可乐。</div>
         <br>
         <h3>
             <strong>
