--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <hr /> <br>
         <div class="lead">I am a PhD student in Finance. I graduated from Leeds University Business School in 2018 and
             Jilin University
-            School of Economics in 2016. I love corporate finance, financial economics, behavioural finance, and diet
+            School of Economics in 2016. I love corporate finance, financial economics, behavioural finance, cooking ,and diet
             coke.</div>
         <br>
         <h3>
