--- a/Links.html
+++ b/Links.html
@@ -117,6 +117,9 @@
     <li style="font-size: large;">
         <a href="https://www.city-data.com/">US City Data</a>
     </li>
+    <li style="font-size: large;">
+        <a href="https://sraf.nd.edu/data/augmented-10-x-header-data/">Augmented 10-X Header Data (US firm headquarters)</a>
+    </li>
 
 </ul>
 <h3>
@@ -124,19 +127,22 @@
 </h3>
 <ul>
     <li style="font-size: large;">
-        <a href="https://alexedmans.com/research/">Prof Alex Edmans</a> (with LBS, very interesting financial and economic contents)
+        <a href="https://alexedmans.com/research/">Prof. Alex Edmans</a> (with LBS, very interesting financial and economic contents)
     </li>
     <li style="font-size: large;">
-        <a href="https://sites.google.com/site/danlingjiang/">Prof Danling Jiang</a> (with Stony Brook U., data and code of her research)
+        <a href="https://sites.google.com/site/danlingjiang/">Prof. Danling Jiang</a> (with Stony Brook U., sharing data and code of her research)
     </li>
     <li style="font-size: large;">
-        <a href="https://stumblingandmumbling.typepad.com/">Chris Dillow</a> (Inspiring articals on behavioural economics and  business)
+        <a href="https://stumblingandmumbling.typepad.com/">Chris Dillow</a> (inspiring articals on behavioural economics and  business)
     </li>
     <li style="font-size: large;">
-        <a href="http://kaichen.work/">Kai Chen</a> (shared SAS, Python, and Stata coding)
+        <a href="http://kaichen.work/">Kai Chen</a> (sharing SAS, Python, and Stata coding)
     </li>
     <li style="font-size: large;">
-        <a href="https://mingze-gao.com/">Mingze Gao</a> (A PhD student, useful teaching and research notes)
+        <a href="https://mingze-gao.com/">Mingze Gao</a> (A PhD student, sharing useful teaching and research notes)
+    </li>
+    <li style="font-size: large;">
+        <a href="https://sites.temple.edu/lnaveen/">Dr Lalitha Naveen</a> (with Fox School of Business, Temple U., sharing research data such as CEO luck and skill, compensation incentives, etc.)
     </li>
 </ul>
 
