--- a/CN.html
+++ b/CN.html
@@ -160,6 +160,22 @@
             <li class="lead">课程助教 (习题课讲师). <em>ECON2181 金融计量学导论</em>
                 (2021年10月- 2021年12月)</li>
         </ol>
+        <br><br>
+        <h3>
+            <strong>
+                有用的链接
+            </strong>
+        </h3>
+        <ol>
+            <li class="lead"><a herf="https://www.ruanyifeng.com/blog/weekly/">
+                阮一峰科技爱好者周刊
+            </a> . 最新计算机技术动态</li>
+            <li class="lead"><a herf="http://www.ncpssd.org/index.aspx">
+                中国国家社会科学文献中心
+            </a> . 简单便捷免费下载国内期刊文章</li>
+        </ol>
+
+
 
     </div>
     <br>
