--- a/Links.html
+++ b/Links.html
@@ -104,11 +104,6 @@
             Online Latex
         </a>
     </li>
-    <li style="font-size: large;">
-        <a hrefl="https://www.ruanyifeng.com/blog/weekly/">
-            阮一峰，科技爱好者周刊
-        </a>
-    </li>
 </ul>
 <h3>
     <strong>Data:</strong>
@@ -133,13 +128,13 @@
         <a href="https://sites.google.com/site/danlingjiang/">Prof. Danling Jiang</a> (with Stony Brook U., sharing data and code of her research)
     </li>
     <li style="font-size: large;">
-        <a href="https://stumblingandmumbling.typepad.com/">Chris Dillow</a> (inspiring articals on behavioural economics and  business)
+        <a href="https://stumblingandmumbling.typepad.com/">Chris Dillow</a> (inspiring articals on behavioural economics and  usiness)
     </li>
     <li style="font-size: large;">
         <a href="http://kaichen.work/">Kai Chen</a> (sharing SAS, Python, and Stata coding)
     </li>
     <li style="font-size: large;">
-        <a href="https://mingze-gao.com/">Mingze Gao</a> (A PhD student, sharing useful teaching and research notes)
+        <a href="https://mingze-gao.com/">Mingze Gao</a> (a PhD student with U. of Sydney, sharing useful teaching and research notes)
     </li>
     <li style="font-size: large;">
         <a href="https://sites.temple.edu/lnaveen/">Dr Lalitha Naveen</a> (with Fox School of Business, Temple U., sharing research data such as CEO luck and skill, compensation incentives, etc.)
