--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+        content="Corporate Finance, Corporate Governvance, Chen Yang Durham, Chen Yang Finance, 杨晨 杜伦大学" />
+    <meta name="Keywords" content="Corporate Finance, Corporate Governvance, Chen Yang Durham, Chen Yang Finance" />
+
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>Chen Yang</title>
 
@@ -38,7 +42,8 @@
     <nav class="navbar navbar-inverse nofollow" role="navigation" style="font-family: Georgia;">
 
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -46,7 +51,7 @@
             </button>
             <a href="index.html" class="navbar-brand">Chen Yang</a>
         </div>
-        <div class="collapse navbar-collapse" id = 'bs-example-navbar-collapse-1'>
+        <div class="collapse navbar-collapse" id='bs-example-navbar-collapse-1'>
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="index.html">About Me</a></li>
                 <li><a href="./CV.html">CV</a></li>
@@ -73,7 +78,8 @@
         <hr /> <br>
         <div class="lead">I am a PhD student in Finance. I graduated from Leeds University Business School in 2018 and
             Jilin University
-            School of Economics in 2016. I love corporate finance, financial economics, behavioural finance, cooking ,and diet
+            School of Economics in 2016. I love corporate finance, financial economics, behavioural finance, cooking
+            ,and diet
             coke.</div>
         <br>
         <h3>
