--- a/CV.html
+++ b/CV.html
@@ -5,13 +5,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+        content="Corporate Finance, Corporate Governvance, Chen Yang Durham, Chen Yang Finance, 杨晨 杜伦大学" />
+    <meta name="Keywords" content="Corporate Finance, Corporate Governvance, Chen Yang Durham, Chen Yang Finance" />
+
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>Chen Yang</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="./bootstrap-3.4.1-dist/css/bootstrap.min.css"
         integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-        <link rel="shortcut icon" href="./iPhone Stocks.ico" />
+    <link rel="shortcut icon" href="./iPhone Stocks.ico" />
     <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
     <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
     <!--[if lt IE 9]>
@@ -38,7 +42,8 @@
     <nav class="nanbar navbar-inverse " role="navigation" style="font-family: Georgia;">
 
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -46,7 +51,7 @@
             </button>
             <a href="index.html" class="navbar-brand">Chen Yang</a>
         </div>
-        <div class="collapse navbar-collapse" id = 'bs-example-navbar-collapse-1'>
+        <div class="collapse navbar-collapse" id='bs-example-navbar-collapse-1'>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="index.html">About Me</a></li>
                 <li class="active"><a href="./CV.html">CV</a></li>
