--- a/Coding.html
+++ b/Coding.html
@@ -83,7 +83,10 @@
                 document. <a href="https://github.com/chenyangfinance/FinanceJournal">[Github Link]</a></p>
             <p class="h4">This project helps me to run a Wechat official account to spread contents about finance,
                 economics, and accounting.</p>
-
+                <div class="text-center">
+                    <img src="https://raw.githubusercontent.com/chenyangfinance/chenyangfinance.github.io/main/wechat.png"
+                        alt="Wechat" width = "300">
+                </div>
     </div>
 
 
