--- a/Links.html
+++ b/Links.html
@@ -152,6 +152,15 @@
                 </li>
             </ul>
 
+            <h3>
+                <strong>My Blogs:</strong>
+            </h3>
+            <ul>
+                <li style="font-size: large;">
+                    <a href="https://www.yuque.com/docs/share/c97dd6d3-837e-4430-9aec-68eef827b001?# 《JFE Corporate Finance Papers》">Corporate Finance Papers on JFE</a> (This blog summarizes corporate finance and corporate govarnance studies published on the Journal of Financial Economics)
+
+            </ul>
+
 
         </ul>
     </div>
