--- a/Links.html
+++ b/Links.html
@@ -157,7 +157,7 @@
             </h3>
             <ul>
                 <li style="font-size: large;">
-                    <a href="https://www.yuque.com/docs/share/c97dd6d3-837e-4430-9aec-68eef827b001?# 《JFE Corporate Finance Papers》">Corporate Finance Papers on JFE</a> (This blog summarizes corporate finance and corporate govarnance studies published on the Journal of Financial Economics)
+                    <a href="https://www.yuque.com/cy_finance/cf_papers">Corporate Finance Papers</a> (This blog summarizes corp. finance and corpo. govarnance studies published on Finance and Economics top journals)
 
             </ul>
 
