--- a/Links.html
+++ b/Links.html
@@ -157,7 +157,7 @@
             </h3>
             <ul>
                 <li style="font-size: large;">
-                    <a href="https://www.yuque.com/cy_finance/cf_papers">Corporate Finance Papers</a> (This blog summarizes corp. finance and corpo. govarnance studies published on Finance and Economics top journals)
+                    <a href="https://www.yuque.com/cy_finance/cf_papers">Corporate Finance Papers</a> (This blog summarizes corp. finance and corp. govarnance studies published on finance and economics top journals)
 
             </ul>
 
