--- a/Notes.html
+++ b/Notes.html
@@ -55,11 +55,10 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="index.html">About Me</a></li>
                 <li><a href="./CV.html">CV</a></li>
-                <li class="active"><a href="./Coding.html">Coding</a></li>
+                <li><a href="./Coding.html">Coding</a></li>
                 <li><a href="./Links.html">Links</a></li>
-                <li><a href="./Notes.html">Notes</a></li>   
+                <li class="active"><a href="./Notes.html">Notes</a></li>
                 <li><a href="./CN.html">中文</a></li>
-
             </ul>
         </div>
     </nav>
@@ -76,21 +75,42 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Talk is cheap, life is short, show me the data, and the code.
             </i>
         </h2>
-        <br>
-        <ul class="list-unstyled">
-            <p class="h4">I use Stata most of time. I also code with Python, Go, and R.</p>
+
+        <ul> <br>
             <br>
-            <p class="h4"> 1. This is a project which can download abstracts from journals and store them as a WORD
-                document. <a href="https://github.com/chenyangfinance/FinanceJournal">[Github Link]</a></p>
-            <p class="h4">This project helps me to run a Wechat official account to spread contents about finance,
-                economics, and accounting.</p>
-                <div class="text-center">
-                    <img src="https://raw.githubusercontent.com/chenyangfinance/chenyangfinance.github.io/main/wechat.png"
-                        alt="Wechat" width = "300">
-                </div>
+            <br>
+            
+
+            <h3>
+                <strong>My Blogs:</strong>
+            </h3>
+            <ul>
+                <li style="font-size: large;">
+                    <a href="https://www.yuque.com/cy_finance/cf_papers">Corporate Finance Papers</a> (This blog summarizes corp. finance and corp. govarnance studies published on finance and economics top journals.)
+
+            </ul>
+            <ul>
+                <li style="font-size: large;">
+                    <a href="https://www.yuque.com/docs/share/0085c526-c567-4fc2-a000-4bf2b7a1769d?# 《How to become a good researcher?》">How to become a good researcher</a> (This blog summarizes some articles about finding good research questions and doing research.)
+
+            </ul>
+
+
+        </ul>
     </div>
-
-
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="text-center">
+        <img src="https://raw.githubusercontent.com/chenyangfinance/chenyangfinance.github.io/main/picture_corporate_finance.jpg"
+            alt="Corporate Finance">
     </div>
 
 
@@ -103,8 +123,6 @@
 <div class="text-center" style="font-family: Georgia, 'Times New Roman', Times, serif;">
     &copy; Coding by Chen
 </div>
-
-
 </footer>
 
 </html>
