--- a/CN.html
+++ b/CN.html
@@ -55,6 +55,7 @@
                 <li><a href="./CV.html">CV</a></li>
                 <li><a href="./Coding.html">Coding</a></li>
                 <li><a href="./Links.html">Links</a></li>
+                <li><a href="./Notes.html">Notes</a></li>   
                 <li class="active"><a href="./CN.html">中文</a></li>
 
             </ul>
