--- a/Links.html
+++ b/Links.html
@@ -57,6 +57,7 @@
                 <li><a href="./CV.html">CV</a></li>
                 <li><a href="./Coding.html">Coding</a></li>
                 <li class="active"><a href="./Links.html">Links</a></li>
+                <li><a href="./Notes.html">Notes</a></li>              
                 <li><a href="./CN.html">中文</a></li>
             </ul>
         </div>
@@ -136,7 +137,7 @@
                     sharing data and code of her research)
                 </li>
                 <li style="font-size: large;">
-                    <a href="https://stumblingandmumbling.typepad.com/">Chris Dillow</a> (inspiring articals on
+                    <a href="https://stumblingandmumbling.typepad.com/">Chris Dillow</a> (inspiring articles on
                     behavioural economics and usiness)
                 </li>
                 <li style="font-size: large;">
@@ -152,14 +153,6 @@
                 </li>
             </ul>
 
-            <h3>
-                <strong>My Blogs:</strong>
-            </h3>
-            <ul>
-                <li style="font-size: large;">
-                    <a href="https://www.yuque.com/cy_finance/cf_papers">Corporate Finance Papers</a> (This blog summarizes corp. finance and corp. govarnance studies published on finance and economics top journals)
-
-            </ul>
 
 
         </ul>
