--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <li><a href="./CV.html">CV</a></li>
                 <li><a href="./Coding.html">Coding</a></li>
                 <li><a href="./Links.html">Links</a></li>
+                <li><a href="./Notes.html">Notes</a></li>   
                 <li><a href="./CN.html">中文</a></li>
             </ul>
         </div>
