--- a/Links.html
+++ b/Links.html
@@ -80,7 +80,7 @@
             <br>
             <br>
             <h3>
-                <strong>My Social Media:</strong>
+                <strong>My Websites:</strong>
             </h3>
             <ul>
                 <li style="font-size: large;">
@@ -88,6 +88,12 @@
                 </li>
                 <li style="font-size: large;">
                     <a>Twitter</a>
+                </li>
+                <li style="font-size: large;">
+                    <a href="https://papers.ssrn.com/sol3/cf_dev/AbsByAuth.cfm?per_id=3367092">SSRN</a>
+                </li>
+                <li style="font-size: large;">
+                    <a href="https://www.yuque.com/cy_finance">Yuque(语雀)</a>
                 </li>
             </ul>
 
