--- a/Links.html
+++ b/Links.html
@@ -157,6 +157,10 @@
                     <a href="https://sites.temple.edu/lnaveen/">Dr Lalitha Naveen</a> (with Fox School of Business,
                     Temple U., sharing research data such as CEO luck and skill, compensation incentives, etc.)
                 </li>
+                <li style="font-size: large;">
+                    <a href="http://www.gormley.info/phd-notes.html">Prof Todd A. Gormley</a> (with Washington U. in St. Louis,
+                    sharing Lecture notes for "Empirical Methods in Corporate Finance" )
+                </li>
             </ul>
 
 
