--- a/Notes.html
+++ b/Notes.html
@@ -86,12 +86,12 @@
             </h3>
             <ul>
                 <li style="font-size: large;">
-                    <a href="https://www.yuque.com/cy_finance/cf_papers">Corporate Finance Papers</a> (This blog summarizes corp. finance and corp. govarnance studies published on finance and economics top journals.)
+                    <a href="https://www.yuque.com/cy_finance/cf_papers">Corporate Finance Papers</a> (This blog collects corp. finance and corp. govarnance studies published on finance and economics top journals.)
 
             </ul>
             <ul>
                 <li style="font-size: large;">
-                    <a href="https://www.yuque.com/docs/share/0085c526-c567-4fc2-a000-4bf2b7a1769d?# 《How to become a good researcher?》">How to become a good researcher</a> (This blog summarizes some articles about finding good research questions and doing research.)
+                    <a href="https://www.yuque.com/docs/share/0085c526-c567-4fc2-a000-4bf2b7a1769d?# 《How to become a good researcher?》">How to become a good researcher</a> (This blog collects some articles about finding good research questions and doing research.)
 
             </ul>
 
