--- a/Links.html
+++ b/Links.html
@@ -158,8 +158,8 @@
                     Temple U., sharing research data such as CEO luck and skill, compensation incentives, etc.)
                 </li>
                 <li style="font-size: large;">
-                    <a href="http://www.gormley.info/phd-notes.html">Prof Todd A. Gormley</a> (with Washington U. in St. Louis,
-                    sharing Lecture notes for "Empirical Methods in Corporate Finance" )
+                    <a href="http://www.gormley.info/phd-notes.html">Prof. Todd A. Gormley</a> (with Washington U. in St. Louis,
+                    sharing lecture notes of "Empirical Methods in Corporate Finance" )
                 </li>
             </ul>
 
