--- a/Notes.html
+++ b/Notes.html
@@ -79,19 +79,26 @@
         <ul> <br>
             <br>
             <br>
-            
+
 
             <h3>
                 <strong>My Blogs:</strong>
             </h3>
             <ul>
                 <li style="font-size: large;">
-                    <a href="https://www.yuque.com/cy_finance/cf_papers">Corporate Finance Papers</a> (This blog collects corp. finance and corp. govarnance studies published on finance and economics top journals.)
+                    <a href="https://www.yuque.com/cy_finance/cf_papers">Corporate Finance Papers</a> (This blog
+                    collects corp. finance and corp. govarnance studies published on finance and economics top
+                    journals.)
 
-            </ul>
-            <ul>
+
                 <li style="font-size: large;">
-                    <a href="https://www.yuque.com/docs/share/0085c526-c567-4fc2-a000-4bf2b7a1769d?# 《How to become a good researcher?》">How to become a good researcher</a> (This blog collects some articles about finding good research questions and doing research.)
+                    <a
+                        href="https://www.yuque.com/docs/share/0085c526-c567-4fc2-a000-4bf2b7a1769d?# 《How to become a good researcher?》">How
+                        to become a good researcher</a> (This blog collects some articles about finding good research
+                    questions and doing research.)
+                <li style="font-size: large;">
+                    <a
+                        href=“https://www.yuque.com/cy_finance/cf_papers/ofsxr9”>中文经管期刊目录</a> (更新四个中文经管顶级期刊的目录，包括经济研究，金融研究，管理世界，和中国工业经济)
 
             </ul>
 
