--- a/Notes.html
+++ b/Notes.html
@@ -98,7 +98,7 @@
                     questions and doing research.)
                 <li style="font-size: large;">
                     <a
-                        href=“https://www.yuque.com/cy_finance/cf_papers/ofsxr9”>中文经管期刊目录</a> (更新四个中文经管顶级期刊的目录，包括经济研究，金融研究，管理世界，和中国工业经济)
+                        href=“https://www.yuque.com/docs/share/6aca8c02-de27-47e0-b09e-a01b904705e5?#”>中文经管期刊目录</a> (更新四个中文经管顶级期刊的目录，包括经济研究，金融研究，管理世界，和中国工业经济)
 
             </ul>
 
